--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="menu.main.profile">Profil</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="chat.sendButton">Envoyer</string>
+    <string name="chat.message">Votre message</string>
 </resources>
