--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="login.name">Votre nom</string>
+    <string name="login.mail">Votre email</string>
     <string name="login.password">Votre mot de passe</string>
     <string name="login.button">Connexion</string>
 
@@ -16,9 +16,12 @@
     <string name="menu.main.register">S\'enregistrer</string>
     <string name="menu.main.login">Se connecter</string>
     <string name="login.info">Veuillez vous connecter</string>
-    <string name="menu.main.profile">Profil</string>
+    <string name="action.profile">Profil</string>
     <string name="title_activity_chat">ChatActivity</string>
     <string name="action_settings">Settings</string>
     <string name="chat.sendButton">Envoyer</string>
     <string name="chat.message">Votre message</string>
+    <string name="action.logout">Déconnexion</string>
+    <string name="profile.saveButton">Sauvegarder</string>
+    <string name="action.chat">Messagerie</string>
 </resources>
