--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="action.logout">Déconnexion</string>
     <string name="profile.saveButton">Sauvegarder</string>
     <string name="action.chat">Messagerie</string>
+
+    <string-array name="navigation_array">
+        <item>Chat</item>
+        <item>Profil</item>
+        <item>Deconnexion</item>
+    </string-array>
 </resources>
